Begin creaing header bar and search component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <app-chat-form></app-chat-form>
+<div>
+  <app-header></app-header>
 </div>
 
 <router-outlet></router-outlet>
