--- a/src/app/modules/header/components/search/search.component.html
+++ b/src/app/modules/header/components/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="search">
-  <input type="text" [placeholder]="searchPlaceholder" />
-  <button>{{searchButton}}</button>
+  <input [ngModel]="searchTerm" type="text" [placeholder]="searchPlaceholder" />
+  <button (click)="makeSearch()">{{searchButton}}</button>
 </div>
