implemented router change without using routerLink directives. Uses event listeners instead.

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,6 +1,5 @@
 <div class="header">
   <h1>{{ headerTitle }}</h1>
-  <div>
-    <app-search></app-search>
-  </div>
+  <app-nav-bar></app-nav-bar>
+  <app-search></app-search>
 </div>
