Setting up router

--- a/src/app/modules/header/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/header/components/nav-bar/nav-bar.component.html
@@ -2,15 +2,13 @@
   <a
     class="router-link"
     routerLink="/"
-    routerLinkActive="active"
-    (click)="changeRoute('/')"
-    >All Players</a
+    [routerLinkActive]="['router-link__active']"
+    >Home</a
   >
   <a
     class="router-link"
     routerLink="/about"
-    routerLinkActive="active"
-    (click)="changeRoute('/about')"
+    [routerLinkActive]="['router-link__active']"
     >About</a
   >
 </nav>
