--- a/src/app/modules/header/components/nav-bar/nav-bar.component.scss
+++ b/src/app/modules/header/components/nav-bar/nav-bar.component.scss
@@ -4,6 +4,7 @@
     font-weight: bold;
     cursor: pointer;
     margin-left: 10px;
+    text-decoration: none;
 
     &:hover {
       color: #CD5C5C;
