Using all players service an rrxjs to stream nfl data and toggle loading in all-players component

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,3 +1,4 @@
-<div>
-  <h1>Hello About</h1>
+<div class="about">
+  <h1 class="about__title">About Draft-EZ</h1>
+  <p>{{ aboutText() }}</p>
 </div>
