--- a/src/app/modules/header/components/nav-bar/nav-bar.component.html
+++ b/src/app/modules/header/components/nav-bar/nav-bar.component.html
@@ -1,14 +1,11 @@
 <nav class="navbar">
-  <a
-    class="router-link"
-    routerLink="/"
-    [routerLinkActive]="['router-link__active']"
+  <a class="router-link" routerLink="/" routerLinkActive="router-link__active"
     >Home</a
   >
   <a
     class="router-link"
     routerLink="/about"
-    [routerLinkActive]="['router-link__active']"
+    routerLinkActive="router-link__active"
     >About</a
   >
 </nav>
