--- a/src/components/Layout/darkmode.scss
+++ b/src/components/Layout/darkmode.scss
@@ -5,8 +5,10 @@ body {
   --textTitle: #222;
   --textLink: #333333;
   --hr: hsla(0, 0%, 0%, 0.2);
+  --h1: #333333;
 
   background-color: var(--bg);
+  color: var(--h1);
   a {
     color: var(--textLink);
   }
@@ -14,13 +16,14 @@ body {
 
 body.dark {
   -webkit-font-smoothing: antialiased;
-
   --bg: #333;
   --textNormal: rgba(255, 255, 255, 0.88);
   --textTitle: white;
   --textLink: #f9d86b;
   --hr: hsla(0, 0%, 100%, 0.2);
+  --h1: white;
 
+  color: var(--h1);
   a {
     color: var(--textLink);
   }
