--- a/src/components/Layout/darkmode.scss
+++ b/src/components/Layout/darkmode.scss
@@ -27,11 +27,18 @@ body.dark {
   -webkit-font-smoothing: antialiased;
   --bg: #333;
   --textNormal: rgba(255, 255, 255, 0.88);
+  --textTitle: $whiteColor;
+  --textLink: $yellowColor;
   --hr: hsla(0, 0%, 100%, 0.2);
 
   color: $whiteColor;
   a {
     color: $yellowColor;
+    transition: color 0.2s ease-in-out;
+
+    &:hover {
+      color: $whiteColor;
+    }
   }
   hr {
     border-top: 0.5px solid $whiteColor;
