--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+// Button Classes
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+  transition: background 0.3s ease-in;
+}
+
+.btn-black {
+  @apply bg-black text-white;
+}
+
+.btn-black:hover {
+  @apply bg-gray-900;
+}
