Adding message input

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -15,3 +15,9 @@
 .btn-black:hover {
   @apply bg-gray-900;
 }
+
+
+// Form Classes
+// .contact-input {
+//   @apply appearance-none block w-full bg-gray-200 text-gray-700 border border-red-500 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white;
+// }
